<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_air_qurey_back"
    android:orientation="vertical"
    tools:context="com.example.airport.navigate.NavigateView">

    <include layout="@layout/layout_common_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280px"
        android:background="@color/color_navigation_top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40px"
            android:background="@color/color_navigation_top"
            android:orientation="horizontal"
            android:paddingLeft="30px">

            <LinearLayout
                android:layout_width="480px"
                android:layout_height="80px"
                android:background="@drawable/back_navigation_select"
                android:orientation="horizontal"
                android:padding="10px">

                <TextView
                    android:id="@+id/tv_selectNum"
                    android:layout_width="0dp"
                    android:layout_height="61px"
                    android:layout_weight="1"
                    android:background="@drawable/back_navigation_select_one"
                    android:gravity="center"
                    android:text="@string/string_nav_select_num"
                    android:textColor="@color/color_white" />

                <TextView
                    android:id="@+id/tv_selectAdd"
                    android:layout_width="0dp"
                    android:layout_height="61px"
                    android:layout_marginLeft="45px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/string_nav_select_add"
                    android:textColor="@color/color_nav_select_one" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_inputNum"
                android:layout_width="480px"
                android:layout_height="80px"
                android:layout_marginLeft="40px"
                android:background="@drawable/back_navigation_select"
                android:orientation="horizontal"
                android:padding="10px"
                android:visibility="visible">

                <EditText
                    android:id="@+id/et_selectNum"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/string_nav_select_add_hint"
                    android:textColorHint="@color/color_nav_select_one"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_selectAddress"
                android:layout_width="480px"
                android:layout_height="80px"
                android:layout_marginLeft="40px"
                android:background="@drawable/back_navigation_select"
                android:orientation="horizontal"
                android:padding="10px"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/rl_selectLeft"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_selectLeft"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/string_air_start"
                        android:text="北京"
                        android:textColorHint="@color/color_nav_select_one"
                        android:textSize="15sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_changeAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5px"
                    android:src="@mipmap/ic_change" />

                <RelativeLayout
                    android:id="@+id/rl_selectRight"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_selectRight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/string_air_end"
                        android:text="上海"
                        android:textColorHint="@color/color_nav_select_one"
                        android:textSize="15sp" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="40px"
            android:background="@color/color_navigation_top"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="480px"
                android:layout_height="80px"
                android:background="@drawable/back_navigation_select"
                android:orientation="horizontal"
                android:padding="10px">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:text="@string/string_out_time" />

                <LinearLayout
                    android:id="@+id/ll_selectTime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_selectTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_select_time" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/ic_nav_down" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="480px"
                android:layout_height="80px"
                android:layout_marginLeft="45px"
                android:background="@drawable/back_navigation_select"
                android:orientation="horizontal"
                android:padding="3px">

                <TextView
                    android:id="@+id/tv_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/back_navigation_select_one"
                    android:gravity="center"
                    android:text="@string/string_select"
                    android:textColor="@color/color_white"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_air_qurery_back"
        android:orientation="horizontal"
        android:padding="10px">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="航班信息"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="计划起飞"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="实际起飞"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="出发地"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="计划到达"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="实际到达"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="到达地"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="准点率"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="状态"
            android:textColor="@color/color_top_title"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_air"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</LinearLayout>
